Fixed css, alignment

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,9 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Orbitron");
 
-body {
+.app {
   padding: 0;
   margin: 0;
   background: linear-gradient(#22aef9, #61f182);
+  height: 100vh;
+  display: grid;
 }
 
 .calculator {
@@ -12,12 +14,15 @@ body {
   align-content: center;
   grid-template-columns: repeat(4, 100px);
   grid-template-rows: minmax(120px, auto) repeat(5, 100px);
-  min-height: 100vh;
-  border: 2px solid black;
+  border: 10px solid black;
+  border-radius: 20px;
+  margin: auto;
+  height: auto;
 }
 
 button {
   font-family: Orbitron, sans-serif;
+  font-size: 24px;
   color: ghostwhite;
   background: #455a64;
   border: solid 0.5px black;
